Remove target install_deps from JenkinsFile
Avoid unecessary copies of deps libs.

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,7 @@
 SolArModulePipeline {
     moduleName="SolARModuleOpenGL"
     dirName="SolARBuild"
-	makeTarget="install install_deps"
+	makeTarget="install"
     runTests=true
     android=false
 }
